@@ -1,4 +1,8 @@
-﻿drkns 28.04.2016 19:06:43 +0200 - build 4646
+﻿drkns 28.04.2016 19:43:18 +0200 - build 4647
+
+1. Продолжение 4631.
+
+drkns 28.04.2016 19:06:43 +0200 - build 4646
 
 1. Продолжение 4631 - уберём ненужные блокировки окон.
 
